--- a/schedule.html
+++ b/schedule.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
+    <button class="hamburger-menu" onclick="toggleMenu()">
+        ☰
+    </button>
     <div id="menu" class="top-menu">
         <a href="index.html">Home</a>
         <a href="aboutMe.html">About Me</a>
