--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Combined Content Sections -->
     <section id="home-section" class="content-section">
         <div class="image">
-            <img src="img/HannahHero.PNG" alt="Hannah Hero Image" style="width:100%;">
+            <img src="img/HannahHero.png" alt="Hannah Hero Image" style="width:100%;">
         </div>
         <div class="welcome-text">
             <h1>Hi, My Name is Hannah!</h1>
