Updated Home Section

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 
     <!-- Combined Content Sections -->
     <section id="home-section" class="content-section">
-        <div class="image">
+        <div class="name-image">
+            <img src="img/hannahName1.png" alt="Hannah Name Image">
+        </div>
+        <div class="hero-image">
             <img src="img/HannahHero.png" alt="Hannah Hero Image">
         </div>
-        <h1>Hi, My Name is Hannah!</h1>
         <div class="welcome-text">
             <p>Step into my chill beauty spot, where getting your hair and makeup done is like hanging out with your bestie. Expect a cool vibe that matches my personality, creating a comfy space where you’re heard and celebrated. Let’s boost your natural beauty and have a fantastic time doing it. Whether you’re up for trying new looks or sticking to your go-to style, our time together is all about making you feel fantastic. I’m currently diving into cosmetology studies, working toward my license and keeping up with the latest trends. Your beauty journey is a dynamic adventure we’ll embark on together as my expertise evolves.</p>
         </div>
@@ -35,19 +37,21 @@
     <!-- About Section -->
     <section id="about-section" class="content-section">
         <h2>About Me</h2>
-        <!-- About Me content -->
+    </section>
+
+    <!-- Gallery Section -->
+    <section id="gallery-section" class="content-section">
+        <h2>Gallery</h2>
     </section>
 
     <!-- Appointment Section -->
     <section id="appointment-section" class="content-section">
         <h2>Make an Appointment</h2>
-        <!-- Appointment content -->
     </section>
 
     <!-- Contact Section -->
     <section id="contact-section" class="content-section">
         <h2>Contact Me</h2>
-        <!-- Contact Me content -->
     </section>
 
     <script src="script.js"></script>
