--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
         <a class="control" href="#about-section">
             <i class="fas fa-user"></i>
         </a>
+        <a class="control" href="#gallery-section">
+            <i class="fas fa-portrait"></i>
+        </a>
         <a class="control" href="#appointment-section">
             <i class="fas fa-calendar"></i>
         </a>
+
+
         <a class="control" href="#contact-section">
             <i class="fas fa-envelope-open"></i>
         </a>
@@ -34,26 +39,43 @@
             <p>Step into my chill beauty spot, where getting your hair and makeup done is like hanging out with your bestie. Expect a cool vibe that matches my personality, creating a comfy space where you’re heard and celebrated. Let’s boost your natural beauty and have a fantastic time doing it. Whether you’re up for trying new looks or sticking to your go-to style, our time together is all about making you feel fantastic. I’m currently diving into cosmetology studies, working toward my license and keeping up with the latest trends. Your beauty journey is a dynamic adventure we’ll embark on together as my expertise evolves.</p>
         </div>
     </section>
+
     <!-- About Section -->
     <section id="about-section" class="content-section">
-        <h2>About Me</h2>
+        <div class="aboutMe-image">
+            <img src="img/aboutMe.png" alt="About Me Image">
+        </div>
     </section>
 
     <!-- Gallery Section -->
     <section id="gallery-section" class="content-section">
-        <h2>Gallery</h2>
+        <div class="gallery-image">
+            <img src="img/Gallery.png" alt="Gallery Image">
+        </div>
+        <div class="carousel">
+            <div class="carousel-images">
+                <img src="img/HannahHero.png" alt="Gallery Image 1" class="active">
+                <img src="img/HannahHero.png" alt="Gallery Image 3">
+            </div>
+            <button class="carousel-control left-control">&lt;</button>
+            <button class="carousel-control right-control">&gt;</button>
+        </div>
     </section>
 
     <!-- Appointment Section -->
     <section id="appointment-section" class="content-section">
-        <h2>Make an Appointment</h2>
+        <div class="appointment-image">
+            <img src="img/appointment.png" alt="Appointment Image">
+        </div>    
     </section>
 
     <!-- Contact Section -->
     <section id="contact-section" class="content-section">
-        <h2>Contact Me</h2>
+        <div class="contact-image">
+            <img src="img/contactMe.png" alt="Contact Me Image">
+        </div> 
     </section>
 
-    <script src="script.js"></script>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
