--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
 
     <!-- Combined Content Sections -->
     <section id="home-section" class="content-section">
+        <div class="logo">
+            <img src="img/BBHLogo.svg" alt="BBHLogo">
+        </div>        
+        <!-- <div class="hero-image">
+            <img src="img/HannahHero.png" alt="Hannah Hero Image">
+        </div> -->
         <div class="name-image">
             <img src="img/hannahName1.png" alt="Hannah Name Image">
         </div>
-        <div class="hero-image">
-            <img src="img/HannahHero.png" alt="Hannah Hero Image">
-        </div>
+
         <div class="welcome-text">
             <p>Step into my chill beauty spot, where getting your hair and makeup done is like hanging out with your bestie. Expect a cool vibe that matches my personality, creating a comfy space where you’re heard and celebrated. Let’s boost your natural beauty and have a fantastic time doing it. Whether you’re up for trying new looks or sticking to your go-to style, our time together is all about making you feel fantastic. I’m currently diving into cosmetology studies, working toward my license and keeping up with the latest trends. Your beauty journey is a dynamic adventure we’ll embark on together as my expertise evolves.</p>
         </div>
