Fixed Calendar and Updated UI

--- a/index.html
+++ b/index.html
@@ -34,18 +34,21 @@
         <!-- <div class="hero-image">
             <img src="img/HannahHero.png" alt="Hannah Hero Image">
         </div> -->
-        <div class="name-image">
+        <!-- <div class="name-image">
             <img src="img/hannahName1.png" alt="Hannah Name Image">
-        </div>
+        </div> -->
 
         <div class="welcome-text">
-            <p>Step into my chill beauty spot, where getting your hair and makeup done is like hanging out with your bestie. Expect a cool vibe that matches my personality, creating a comfy space where you’re heard and celebrated. Let’s boost your natural beauty and have a fantastic time doing it. Whether you’re up for trying new looks or sticking to your go-to style, our time together is all about making you feel fantastic. I’m currently diving into cosmetology studies, working toward my license and keeping up with the latest trends. Your beauty journey is a dynamic adventure we’ll embark on together as my expertise evolves.</p>
+            <p>Welome to my chill beauty spot, where getting your hair and makeup done is like hanging out with your bestie. Together we will boost your natural beauty and have a fantastic time while doing it. Whether you’re up for trying new looks or sticking to your go-to style, our time together is all about making you feel fantastic. I’m currently working toward my license and keeping up with the latest trends. Your beauty journey is a dynamic adventure we’ll embark on together as my expertise evolves.</p>
         </div>
     </section>
 
     <!-- About Section -->
     <section id="about-section" class="content-section">
         <div class="about-container">
+            <div class="aboutMe-image">
+                <img src="img/aboutMe.png" alt="About Me Image">
+            </div>
             <div class="about-item">
                 <div class="about-image">
                     <img src="img/abMe1.png" alt="About Me 1">
