Mobile UI Updates

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img src="img/hannahName1.png" alt="Hannah Name Image">
         </div> -->
         <div class="welcome-text">
-            <p>Welome to my chill beauty spot, where getting your hair and makeup done is like hanging out with your bestie. Together we will boost your natural beauty and have a fantastic time while doing it. Whether you’re up for trying new looks or sticking to your go-to style, our time together is all about making you feel fantastic. I’m currently working toward my license and keeping up with the latest trends. Your beauty journey is a dynamic adventure we’ll embark on together as my expertise evolves.</p>
+            <p>Welcome to Brushed By Hannah, where enhancing your natural beauty is my passion. Experience a blend of professional hair and makeup services tailored to your preferences, whether you're exploring new trends or embracing your classic style. Join me on this exciting journey of beauty and self-discovery, where every session is a step towards your ideal look.</p>
         </div>
     </section>
 
@@ -150,7 +150,7 @@
             <input type="text" id="last-name" name="last_name" placeholder="Last Name" required>
             <input type="email" id="email" name="email" placeholder="Email Address" required>
             <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
+            <button type="submit", style>Send Message</button>
         </form>
 
     </section>
