--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <img src="img/aboutMe.png" alt="About Me Image">
             </div>
             <div class="about-item">
-                <div class="about-image">
+                <div class="about-image1">
                     <img src="img/abMe1.png" alt="About Me 1">
                 </div>
                 <div class="about-text">
@@ -59,7 +59,7 @@
             </div>
     
             <div class="about-item reverse">
-                <div class="about-image">
+                <div class="about-image2">
                     <img src="img/abMe2.png" alt="About Me 2">
                 </div>
                 <div class="about-text">
@@ -68,7 +68,7 @@
             </div>
     
             <div class="about-item">
-                <div class="about-image">
+                <div class="about-image3">
                     <img src="img/abMe3.png" alt="About Me 3">
                 </div>
                 <div class="about-text">
