Basic Back end to Create appointment

--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
             <button id="close-popup" class="close-popup">&times;</button>
             <p id="availability-text">Availability on <span id="selected-date">XXXX</span></p>
         </div>
+
+
+        <div id="service-selection-popup" class="service-selection-popup">
+            <button class="service-option" data-duration="60">Men's Basic Cut (30 mins)</button>
+            <button class="service-option" data-duration="60">Men's Wash & Cut (1 hour)</button>
+            <button class="service-option" data-duration="120">Women's Blowout (30 mins)</button>
+            <button class="service-option" data-duration="120">Women's Cut (1 hour)</button>
+            <button class="service-option" data-duration="120">Women's Cut & Color (3 hours)</button>
+        </div>
     </section>
 
     <!-- Contact Section -->
