--- a/index.html
+++ b/index.html
@@ -9,35 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div class="side-controls">
-        <a class="control" href="#home-section">
-            <i class="fas fa-home"></i>
-        </a>
-        <a class="control" href="#about-section">
-            <i class="fas fa-user"></i>
-        </a>
-        <a class="control" href="#gallery-section">
-            <i class="fas fa-portrait"></i>
-        </a>
-        <a class="control" href="#appointment-section">
-            <i class="fas fa-calendar"></i>
-        </a>
-        <a class="control" href="#contact-section">
-            <i class="fas fa-envelope-open"></i>
-        </a>
-    </div>
+    <header class="main-header">
+        <div class="logo">
+            <img src="img/BBHLogo.svg" alt="BBHLogo">
+        </div>
+        <nav class="main-nav">
+            <a href="#home-section"><i class="fas fa-home"></i> Home</a>
+            <a href="#about-section"><i class="fas fa-user"></i> About Me</a>
+            <a href="#gallery-section"><i class="fas fa-portrait"></i> My Work</a>
+            <a href="#appointment-section"><i class="fas fa-calendar"></i> Appointments</a>
+            <a href="#contact-section"><i class="fas fa-envelope-open"></i> Contact Me</a>
+        </nav>
+    </header>
 
     <!-- Combined Content Sections -->
     <section id="home-section" class="content-section">
-        <div class="logo">
-            <img src="img/BBHLogo.svg" alt="BBHLogo">
-        </div>        
-        <!-- <div class="hero-image">
-            <img src="img/HannahHero.png" alt="Hannah Hero Image">
-        </div> -->
-        <!-- <div class="name-image">
-            <img src="img/hannahName1.png" alt="Hannah Name Image">
-        </div> -->
         <div class="welcome-text">
             <p>Welcome to Brushed By Hannah, where enhancing your natural beauty is my passion. Experience a blend of professional hair and makeup services tailored to your preferences, whether you're exploring new trends or embracing your classic style. Join me on this exciting journey of beauty and self-discovery, where every session is a step towards your ideal look.</p>
         </div>
