--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
             <a href="#appointment-section"><i class="fas fa-calendar"></i> Appointments</a>
             <a href="#contact-section"><i class="fas fa-envelope-open"></i> Contact Me</a>
         </nav>
+        <div class="insta">
+            <img src="img/instaLogo.png" alt="IGLogo">
+        </div>
     </header>
 
     <!-- Combined Content Sections -->
     <section id="home-section" class="content-section">
-        <div class="welcome-text">
+        <!-- <div class="welcome-text">
             <p>Welcome to Brushed By Hannah, where enhancing your natural beauty is my passion. Experience a blend of professional hair and makeup services tailored to your preferences, whether you're exploring new trends or embracing your classic style. Join me on this exciting journey of beauty and self-discovery, where every session is a step towards your ideal look.</p>
-        </div>
+        </div> -->
     </section>
 
     <!-- About Section -->
