Linked to instagram

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             <a href="#contact-section"><i class="fas fa-envelope-open"></i> Contact Me</a>
         </nav>
         <div class="insta">
-            <img src="img/instaLogo.png" alt="IGLogo">
+            <a href="https://www.instagram.com/brushedbyhannah/?igsh=MWtxd3plYWx1bmNvYg%3D%3D&utm_source=qr
+            " target="_blank">
+                <img src="img/instaLogo.png" alt="Instagram Logo">
+            </a>
         </div>
     </header>
 
